fix: links hover effects; mobile screen visibility

--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -106,7 +106,7 @@ input:focus {
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
   .desktopOnly {
     display: none !important;
   }
