--- a/src/components/common/UsedTechs/UsedTechs.module.css
+++ b/src/components/common/UsedTechs/UsedTechs.module.css
@@ -33,3 +33,9 @@
     min-width: 81px;
   }
 }
+
+@media (max-width: 464px) {
+  .text {
+    font-size: 14px;
+  }
+}
